# chihuahua_vibikk_777

./: .gitignore  README.md  pyproject.toml
src/chihuahua_tools/assets/models/: chihuahua_vibe.pkl  chihuahua_vibe_features.pkl
src/chihuahua_tools/behavior/: __init__.py  predict.py
src/chihuahua_tools/classification/: __init__.py  predict.py
src/chihuahua_tools/emoji/: __init__.py  main.py
src/chihuahua_tools/horoscope/: __init__.py  generator.py  main.py  prompts.py
